examples/test/testpolicy14813.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14813
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key6: value31
      key49: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value13
          key13: value38
          key1: value48
      podSelector:
        matchLabels:
          key21: value45
          key40: value23
          key44: value4
